src/components/style.css
input{
    padding: 5px;
}

body{
    transition: all 0.3s ease-in-out;
}

@media screen and (max-width: 1000px) {
    .dropdown-templates, .dropdown-content{
        position: absolute;
        top: 10%;
        width: 80%;
        margin-left: 5px;
    }
}

@media screen and (max-width: 400px) {
    .dropdown-templates, .dropdown-content{
        display: block;
        height: 400px;
        width: 250px;
        overflow-y: scroll;
        justify-content: center;
    }
    .select-template{
        display: block !important;
        justify-content: center;
        width: 90%;
    }
    .select-template button{
        margin-top: 5px;
    }
}

@media screen and (min-width: 1001px) {
    .template-data {
        min-height: 100px;
        background-color: rgb(255 240 240);
        border-radius: 5px;
    }

    .dropdown-templates{
        height: 200px;
        justify-content: space-around;
        width: 300px;
        margin-left: 15px;
    }
}

.dropdown-templates {
    display: none;
    padding: 15px;
    border-style: solid;
    border-color: black;
    background-color: rgba(245, 245, 245, 0.514);
    margin-top: -15px;
    position: absolute;
}

.side-colors{
    display: none;
    padding: 15px;
    height: 120px;
    width: 300px;
    border-style: solid;
    border-color: black;
    background-color: rgba(245, 245, 245, 0.514);
    margin-left: 15px;
    margin-top: -15px;
    justify-content: space-around;
}

.contact-template2 .title{
    width: 98%;
    align-items: start;
    text-align: start !important;
    margin: 0px;
    border-bottom: 1px solid gray;
}
.contact-template2{
    padding: 0px;
    margin: 0px;
}

.social-template2 {
    width: 100%;
    align-items: start;
    text-align: start !important;
    padding: 0px;
    margin: 0px;
    border-bottom: 1px solid gray;
}
.social-itens-template2{
    display: block;
    width: 80%;
    margin-left: 25px;
}

.social-item-template2{
    padding: 10px;
    height: 100%;
    width: 100%;
}

.social-item-template2 img {
    top: 5px;
    position: relative;
}

.email-text{
    /* word-break: break-all !important; */
    word-break: break-all;
}

/* global itens  */
.remove-bnt{
    float: right;
    margin-top: -10px;
    display: none;
}

.remove-bnt-delete{
    position: relative;
    display: none;
    float: right;
    margin-top: 3px;
    margin-right: 20px;
}
.social-item-template2:hover .remove-bnt-delete{
    display: block;
    width: 20px;
    position: relative;
    margin-top: -5px;
}

.social-item-template2:hover {
    display: block;
    background-color: #d7d7d7;
    border-radius: 10px;
}

.social-item-template2:hover .remove-bnt{
    display: none;
}
.editar-animado{
    width: 20px;
    position: relative;
    float: right;
    display: none;
    margin-left: 10px;
}
h3:hover .editar-animado{
    display: block;
    width: 20px;
}
.editar-contact{
    width: 20px;
    float: right;
}
.editar-contact-animado{
    width:20px;
    float: right;
    display: none;
    right: -20px;
    position: relative;
}
.title:hover .editar-contact-animado{
    display: block;
}
.experiences-template2-title .title{
    align-items: start;
    text-align: start !important;
    margin: 0px;
    border-bottom: 1px solid gray;
    font-weight: bolder;
    margin-top: 20px;
}
@media print {
    .not-visible {
        display: none !important;
    }
    .template-data{
        min-height: 100px;
    }

    .editar-contact-animado{
        display: none;
    }
    .editar-contact{
        display: none;
    }
    .editar{
        display: none !important;
    }
    .editar-animado{
        display: none !important;
    }

    #headericon{
        display: none;
    }

    .social-item-template1 span {
        word-break: break-all;
        max-width: 190px;
    }
}

.social-item-template2{
    margin-bottom: 10px;
}

.social-item-template2 span{
    word-break: break-all;
}

.social-itens-template2{
    margin-left: 1% !important;
}

.social-item-template1{
    margin-bottom: 10px;
    height: 100%;
    display: flex;
    padding: 5px;
}

.social-item-template1:hover {
    background-color: #d7d7d7;
    border-radius: 10px;
}

.social-item-template1:hover .remove-bnt{
    display: block;
    border-radius: 10px;
    padding: 10px;
    background-color: white;
    position: relative;
    float: right;
}

.social-row span{
    margin-bottom: 5px;
    position: relative;
}
.social-item-template1 img{
    width: 24px !important;
    height: 24px !important;
}

.data-container{
    position: relative;
    /* word-wrap: break-word; */
    word-wrap: normal;
    word-break: auto-phrase !important;
}

/* .data-container:hover {
    background-color: #d7d7d7;
    border-radius: 10px;
} */

.template1-experiencias-container{
    padding: 10px;
}

.template1-experiencias-container:hover {
    background-color: #d7d7d7;
    border-radius: 10px;
    padding: 10px;
}

.editar:active{
    transform: scale(1.5);
}

button:active {
    transform: scale(0.7);
}

button {
    font-family: 'Roboto Mono', monospace;
}

@media  screen and (max-width: 1000px) {
    button {
        width: 100%;
    }
}

@media screen and (min-width: 1001px){
    button {
        min-width: 150px;
    }
}

.template2-experiencias-container:hover {
    background-color: #d7d7d7;
    border-radius: 10px;
    padding-left: 2px;
    padding-right: 2px;
}

.template2-experiencias-container .remove-bnt
{
    position: absolute;
    margin-left: 24%;
    margin-top: -10px;
    display: none;
    background-color: whitesmoke;
    padding: 10px;
    border-radius: 10px;
}


.template2-experiencias-container:hover .remove-bnt
{
    display: block;
}

.template1-formacao-container span {
    margin-top: 15px;
}

.phone-enabled {
    position: absolute;
    right: 5px;
}

.phone-disabled {
    display: none;
    position: absolute;
    right: 5px;
}

@media print {
    .phone-enabled {
        display: none !important;
    }

    .phone-disabled {
        display: none !important;
    }

    #enable {
        display: none;
    }

    #disabled {
        display: none;
    }
}

